--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+/*Custom properties */
 :root {
     --ff-primary: 'Roboto', sans-serif;
     --ff-secundary: 'Open Sans', sans-serif;
@@ -19,8 +20,173 @@
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+          0.125em 0.125em 0.25em rgba(0,0,0,.15);
+}
+
+/*For large screen size 800px up*/
+@media (min-width: 800px) {
+    :root {
+        --ff-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
+}
+
+/*For medium screen size 600px up*/
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 1em;
+        grid-template-areas:
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
+}
+
+/* General styles */
+body {
+    background-color: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0px;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+}
+
+section {
+    padding: 5em 2em;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+strong {
+    font-weight: var(--ff-bold);
+}
+
+/* Typography */
+
+h1,
+h2,
+h3 {
+    line-height: 1;
+    margin: 0;
+}
+
+h1 {
+    font-size: var(--fs-h1);
+}
+h2 {
+    font-size: var(--fs-h2);
+}
+h3 {
+    font-size: var(--fs-h3);
+}
+
+/* Styling titles */
+.section__title {
+    margin-bottom: .25em;
+}
+.section__title--intro {
+    font-weight: var(--ff-reg);
+}
+
+/* using compound selectors*/
+.section__title--intro strong {
+    display: block;
+}
+
+/* Styling subtitles */
+.section__subtitle {
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    padding: .25em 1em;
+    font-family: var(--ff-secundary);
+    margin-bottom: 1em;
+}
+
+.section__subtitle--intro {
+    display: inline-block;
+}
+
+/* Styling headers */
+nav {
+    display: none;
+}
+
+/* Styling intro section */
+.intro {
+    position: relative;
+}
+
+.intro__img {
+    box-shadow: var(--bs);
+}
+
+/* My Services section */
+.my-services {
+    background-color: var(--clr-dark);
+    background-image: url(../img/img_my_services_background.jpg);
+    background-size: cover;
+    background-blend-mode: exclusion;
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.section__title--services {
+    color: var(--clr-accent);
+    position: relative;
+}
+
+.section__title--services::after {
+    content: '';
+    display: block;
+    width: 2em;
+    height: 3px;
+    margin: 0.5em auto 1em;
+    background-color: currentColor;
+    opacity: 0.5;
+}
+
+.service {
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 @media (min-width: 800px) {
-    
+    .services {
+        display: flex;
+        max-width: 1000px;
+        margin: 0 aut0;
+    }
+    .service + .service {
+        margin-left: 2em;
+    }
 }
