--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
+    --fw-bold: 900;
+
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
           0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
@@ -41,7 +43,7 @@
         display: grid;
         width: min-content;
         margin: 0 auto;
-        grid-column-gap: 1em;
+        column-gap: 1em;
         grid-template-areas:
             "img title"
             "img subtitle";
@@ -84,7 +86,30 @@ img {
 }
 
 strong {
-    font-weight: var(--ff-bold);
+    font-weight: var(--fw-bold);
+}
+
+:focus {
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+.btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-accent);
+    color: var(--clr-dark);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+    transform: scale(1.1);
 }
 
 /* Typography */
@@ -129,6 +154,11 @@ h3 {
     background: var(--clr-accent);
     padding: .25em 1em;
     font-family: var(--ff-secundary);
+    margin-bottom: 2em;
+}
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
     margin-bottom: 1em;
 }
 
@@ -175,6 +205,10 @@ nav {
     opacity: 0.5;
 }
 
+.services {
+    margin-bottom: 3em;    
+}
+
 .service {
     max-width: 500px;
     margin: 0 auto;
@@ -184,9 +218,126 @@ nav {
     .services {
         display: flex;
         max-width: 1000px;
-        margin: 0 aut0;
+        margin-right: auto;
+        margin-left: auto;
     }
     .service + .service {
         margin-left: 2em;
     }
+}
+
+/* About me section */
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+.about-me__img {
+    box-shadow: var(--bs);
+    border-radius: 50%;
+}
+
+@media (min-width: 600px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+            "title img"
+            "subtitle img"
+            "text img";
+        column-gap: 2em;
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+    .section__subtitle--about {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% - 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 1em);
+    }
+
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* My Work section */
+.my-work {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.portfolio {
+    display: grid;
+    /*grid-template-columns: repeat(3, 1fr);*/
+    /*Reactive size grid templete columns accourding the screen*/
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.portfolio__item {
+    background: var(--clr-accent);
+    overflow: hidden;
+}
+.portfolio__img {
+    transition:
+        transform 750ms cubic-bezier(0.47, 0, 0.745, 0.715),
+        opacity 250ms linear;
+    width: 100%;
+    height: auto;
+}
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .75;
+}
+
+/* Footer section */
+.footer {
+    background: black;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+.footer__link:hover {
+    text-decoration: underline;
+}
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+.social-list__item {
+    margin: 0 0.5em;
+}
+
+.social-list__link {
+    padding: 0.5em;
 }
