--- a/sunnyside-agency-landing-page-main/css/styles.css
+++ b/sunnyside-agency-landing-page-main/css/styles.css
@@ -82,6 +82,9 @@ header {
     text-decoration-line: underline;
     text-decoration-thickness: 3px;
 }
+.sunnyside__learn:hover {
+    cursor: pointer;
+}
 .sunnyside__brand-learn {
     text-decoration-color: hsl(51, 100%, 49%);
 }
@@ -322,31 +325,51 @@ header {
         display: none;
     }
     .sunnyside__nav-links {
-        list-style-type: none;
-        overflow: hidden;
         color: hsl(0, 0%, 100%);
-        margin-top: 0%;
-        width: 100%;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    .sunnyside__nav {
+        display: inline;
+        float: left;
+        margin-top: 3.2%;
+        font-size: 18px;
+    }
+    .sunnyside__nav:hover {
+        cursor: pointer;
     }
     .sunnyside__logo {
-        float: left;
-        margin-top: 3.4%;
-        margin-left: -86%;
-        min-width: 168px;
+        margin-left: 40px;
+        max-width:100%;
+        height:33px;
     }
     .sunnyside__nav-link {
         float: right;
-        margin-top: 3.4%;
-        margin-right: 2%;
-        text-align: right;
+        padding-left: 5px;
+        margin-top: 3.5%;
+        margin-right: 45px;
     }
     .sunnyside__nav-button {
-        margin-top: 0px;
+        float: right;
+        font-family: 'Fraunces', serif;
+        color: hsl(212, 27%, 19%);
+        margin-top: 3.5%;
+        margin-right: 47px;
+        height: 50px;
+    }
+    .sunnyside__contact-button {
+        text-transform: uppercase;
+        font-size: 15px;
+        background-color: hsl(0, 0%, 100%);
+        border-radius: 30px;
+        padding: 20px 32px;
     }
     .sunnyside__title {
         letter-spacing: 11px;
         font-size: 55px;
-        margin-top: 8%;
+        margin-top: 6.5%;
     }
     .sunnyside__arrow {
         margin-top: 5%;
