--- a/sunnyside-agency-landing-page-main/css/styles.css
+++ b/sunnyside-agency-landing-page-main/css/styles.css
@@ -12,7 +12,7 @@ header {
     background-image: url('../images/mobile/image-header.jpg');
     height: 537px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100%;
     background-position: inherit;
 }
 .sunnyside__logo {
@@ -381,8 +381,8 @@ header {
         display: inline;
         float: left;
         margin-top: 2.3%;
-        padding-left: 13px;
-        padding-right: 34px;
+        padding-left: 1.3%;
+        padding-right: 2%;
     }
     .sunnyside__nav-button {
         display: inline;
@@ -403,7 +403,7 @@ header {
         padding-top: 13.5%;
     }
     .sunnyside__arrow {
-        margin-top: 5%;
+        margin-top: 4%;
     }
 
 
