--- a/sunnyside-agency-landing-page-main/css/styles.css
+++ b/sunnyside-agency-landing-page-main/css/styles.css
@@ -14,6 +14,11 @@ header {
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: inherit;
+}   
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: hsl(232, 10%, 55%);
 }
 .sunnyside__logo {
     margin-top: 8.5%;
@@ -23,7 +28,6 @@ header {
 .sunnyside__nav-links {
     display: none;
     list-style-type: none;
-    color: hsl(213, 9%, 39%);
     background-color: hsl(0, 0%, 100%);
     position: absolute;
     margin-top: 46px;
@@ -32,6 +36,9 @@ header {
     padding-right: 12px;
     padding-top: 23px;
     padding-bottom: 57px;
+}
+.sunnyside__nav-links:link {
+    text-decoration: none;
 }
 .sunnyside__nav-triangle {
     display: none;
@@ -48,13 +55,13 @@ header {
     padding: 17px 115px;
 }
 .sunnyside__nav-button {
-    color: hsl(212, 27%, 19%);
     margin-top: 34px;
 }
 .sunnyside__contact-button {
     font-family: 'Fraunces', serif;
     text-transform: uppercase;
     font-size: 15px;
+    color: hsl(212, 27%, 19%);
     background-color: hsl(51, 100%, 49%);;
     border-radius: 30px;
     padding: 20px 32px;
@@ -111,9 +118,7 @@ header {
     text-transform: uppercase;
     text-decoration-line: underline;
     text-decoration-thickness: 3px;
-}
-.sunnyside__learn:hover {
-    cursor: pointer;
+    color: hsl(212, 27%, 19%);
 }
 .sunnyside__brand-learn {
     text-decoration-color: hsl(51, 100%, 49%);
@@ -295,7 +300,6 @@ header {
 .sunnyside__footer-options {
     padding-top: 5px;
     display: flex;
-    color: hsl(167, 40%, 24%);
     font-size: 20px;
     list-style: none;
     justify-content: center;
@@ -303,9 +307,11 @@ header {
 .sunnyside__footer-option {
     margin-right: 45px;
 }
-.sunnyside__footer-option:hover {
+.sunnyside__footer-link {
+    color: hsl(167, 40%, 24%);
+}
+.sunnyside__footer-link:hover {
     color: hsl(0, 0%, 100%);
-    cursor: pointer;
 }
 .sunnyside__footer-icons {
     margin-top: 50px;
@@ -317,11 +323,12 @@ header {
 .sunnyside__footer-icon {
     margin-top: 40px;
     margin-right: 34px;
+}
+.sunnyside__footer-icon-link {
     fill: hsl(167, 40%, 24%);
 }
-.sunnyside__footer-icon:hover {
+.sunnyside__footer-icon-link:hover {
     fill: hsl(0, 0%, 100%);
-    cursor: pointer;
 }
 
 .attribution { font-size: 11px; text-align: center; }
@@ -356,7 +363,6 @@ header {
     }
     .sunnyside__nav-links {
         display: inline;
-        color: hsl(0, 0%, 100%);
         position: relative;
         margin: 0px;
         padding: 0px;
@@ -365,9 +371,6 @@ header {
         float: left;
         margin-top: 3.2%;
         font-size: 18px;
-    }
-    .sunnyside__nav:hover {
-        cursor: pointer;
     }
     .sunnyside__logo {
         margin-left: 40px;
@@ -384,17 +387,25 @@ header {
         padding-left: 1.3%;
         padding-right: 2%;
     }
+    .sunnyside__nav-link-text {
+        color: hsl(0, 0%, 100%);
+    }
     .sunnyside__nav-button {
         display: inline;
         float: left;
         padding: 0px;
-        margin-left: 25px;
+        margin-left: 1%;
         margin-top: 3.5%;
         margin-right: 17px;
         height: 50px;
     }
     .sunnyside__contact-button {
+        color: hsl(212, 27%, 19%);
         background-color: hsl(0, 0%, 100%);
+    }
+    .sunnyside__contact-button:hover {
+        color: hsl(0, 0%, 100%);
+        background-color: hsl(209, 83%, 79%);
     }
     .sunnyside__title {
         letter-spacing: 11px;
@@ -433,10 +444,11 @@ header {
     .sunnyside__brand-text {
         margin-top: 35px;
         margin-left: 5.5%;
+        margin-bottom: 8.3%;
     }
     .sunnyside__learn {
         margin-top: 40px;
-        margin-left: 6.5%;
+        margin-left: 6.8%;
     }
 
     /**/
@@ -464,6 +476,7 @@ header {
     .sunnyside__audience-text {
         margin-top: 35px;
         margin-left: 5.5%;
+        margin-bottom: 8%;
     }
     .sunnyside__audience-learn {
         margin-top: 40px;
