--- a/sunnyside-agency-landing-page-main/css/styles.css
+++ b/sunnyside-agency-landing-page-main/css/styles.css
@@ -223,14 +223,18 @@ a {
     font-size: 17px;
     color: hsl(210, 4%, 67%);
 }
+.sunnyside__testimonials-container {
+    margin: 0px;
+    padding: 0px;
+}
 .sunnyside__testimonials-image {
     border-radius: 50%;
     max-width: 70px;
-    margin-top: 64px;
+    margin-top: 66px;
     margin-bottom: 33px;
 }
 .sunnyside__testimonials-text {
-    margin-left: 27px;
+    margin-left: 21px;
     margin-right: 27px;
     line-height: 30px;
     font-size: 18px;
@@ -248,7 +252,7 @@ a {
 
 /* Galery*/
 .sunnyside__gallery-images {
-    margin-top: 100px;
+    margin-top: 25%;
     display: grid;
     gap: 0px;
     grid-template-columns: 1fr 1fr;
@@ -291,21 +295,23 @@ a {
 
 .sunnyside__logo-footer {
     margin-top: 0px;
-    margin-left: -10px;
-    padding-top: 50px;
+    margin-left: -14px;
+    padding-top: 52px;
     font-family: 'Barlow', sans-serif;
     color: hsl(167, 40%, 24%);
-    font-size: 40px;
+    font-size: 37px;
+    letter-spacing: 1px;
 }
 .sunnyside__footer-options {
-    padding-top: 5px;
+    padding-top: 12px;
     display: flex;
-    font-size: 20px;
+    font-size: 18px;
     list-style: none;
     justify-content: center;
 }
 .sunnyside__footer-option {
-    margin-right: 45px;
+    margin-right: 50px;
+    margin-left: 7px;
 }
 .sunnyside__footer-link {
     color: hsl(167, 40%, 24%);
@@ -314,15 +320,15 @@ a {
     color: hsl(0, 0%, 100%);
 }
 .sunnyside__footer-icons {
-    margin-top: 50px;
+    margin-top: 90px;
     padding-bottom: 75px;
     display: flex;
     list-style: none;
     justify-content: center;
 }
 .sunnyside__footer-icon {
-    margin-top: 40px;
-    margin-right: 34px;
+    margin-left: -7px;
+    margin-right: 35px;
 }
 .sunnyside__footer-icon-link {
     fill: hsl(167, 40%, 24%);
@@ -515,7 +521,7 @@ a {
 
     /*Testimonials*/
     .sunnyside__testimonials-title {
-        margin-top: 162px;
+        margin-top: 160px;
         font-size: 20px;
         letter-spacing: 5.5px;
     }
@@ -524,13 +530,14 @@ a {
         grid-template-columns: 1fr 1fr 1fr;
         margin-left: 150px;
         margin-right: 150px;
+        list-style-type: none;
     }
     .sunnyside__testimonials-image {
-        margin-top: 80px;
+        margin-top: 82px;
     }
     .sunnyside__testimonials-text {
         margin-top: 24px;
-        margin-left: 20px;
+        margin-left: 16px;
         margin-right: 16px;
         line-height: 31.5px;
     }
@@ -541,7 +548,8 @@ a {
     }
     .sunnyside__testimonials-position {
         margin-top: 10px;
-        font-size: 15px;
+        font-size: 14px;
+        margin-left: -15px;
     }
     
     /* Galery*/
@@ -573,6 +581,7 @@ a {
         padding-top: 60px;
     }
     .sunnyside__footer-option {
-        margin-right: 45px;
+        margin-left: 9px;
+        margin-right: 47px;
     }
 }
