--- a/fem/blog-preview-card-main/css/blog-card.css
+++ b/fem/blog-preview-card-main/css/blog-card.css
@@ -12,7 +12,7 @@ html {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 
   /* Using grid to center the card */
   display: grid;
@@ -22,16 +22,16 @@ html {
 
 .card {
   background-color: white;
-  max-width: 300px;
+  max-width: 304px;
   border: 0.1em, solid, black;
   border-radius: 5%;
   box-shadow: 8px 8px 0px 0 black;
-  padding: 1em 1em;
+  padding: 1.5em 1.5em;
 }
 .card__header {
   margin: 0;
-  width: 300px;
-  height: 201px;
+  width: 100%;
+  height: 220px;
   overflow: hidden;
   position: relative;
   border-radius: 6%;
@@ -54,10 +54,10 @@ html {
 }
 .card_date {
   margin-top: 1em;
-  font-weight: 400;
+  font-weight: lighter;
 }
 .card_text {
-  font-weight: 300;
+  font-weight: lighter;
 }
 .card__footer {
   margin-top: 1.5em;
@@ -68,4 +68,10 @@ html {
 .card__fotter-avatar {
   margin-right: 0.7em;
   max-width: 40px;
+}
+
+@media (min-width: 600px) {
+  .card {
+    max-width: 367px;
+  }
 }
