--- a/fem/blog-preview-card-main/css/blog-card.css
+++ b/fem/blog-preview-card-main/css/blog-card.css
@@ -44,15 +44,17 @@ html {
   transform: translate(-50%, -50%); /* Adjust position */
 }
 .card__button {
-  margin-top: 2.4rem;
+  margin-top: 2.2rem;
   padding: 0.5rem 1.2rem;
   border: 0;
   background-color: hsl(47, 88%, 63%);
   border-radius: 10%;
   color: hsl(0, 0%, 7%);
+  font-weight: bolder;
+  font-size: large;
 }
 .card_date {
-  margin-top: 1.3rem;
+  margin-top: 1.5rem;
   font-size: 1.2rem;
 }
 .card__title {
@@ -61,13 +63,15 @@ html {
   font-size: 2rem;
 }
 .card_text {
+  margin-top: -5px;
   font-size: 1.4rem;
+  line-height: 1.5;
 }
 .card__footer {
   color: hsl(0, 0%, 7%);
   display: flex;
   align-items: center;
-  margin-top: 3.2rem;
+  margin-top: 2.3rem;
   font-weight: bolder;
   font-size: 1.5rem;
 }
@@ -81,19 +85,20 @@ html {
     max-width: 34rem;
   }
   .card__button {
-    margin-top: 3rem;
+    padding: 0.6rem 1.5rem;
   }
   .card_date {
-    margin-top: 1.2rem;
+    margin-top: 1.4rem;
     font-size: 1.4rem;
   }
   .card__title {
+    margin-top: 1.7rem;
     font-size: 2.4rem;
   }
   .card_text {
     font-size: 1.6rem;
   }
   .card__footer {
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
 }
