--- a/fem/blog-preview-card-main/css/blog-card.css
+++ b/fem/blog-preview-card-main/css/blog-card.css
@@ -43,22 +43,25 @@ html {
   left: 50%; /* Center horizontally */
   transform: translate(-50%, -50%); /* Adjust position */
 }
+.card__main {
+  margin-left: 2px;
+}
 .card__button {
-  margin-top: 2.2rem;
-  padding: 0.5rem 1.2rem;
+  margin-top: 2.4rem;
+  padding: 0.8rem 1.2rem;
   border: 0;
   background-color: hsl(47, 88%, 63%);
   border-radius: 10%;
   color: hsl(0, 0%, 7%);
   font-weight: bolder;
-  font-size: large;
+  font-size: 1.1rem;
 }
 .card_date {
   margin-top: 1.5rem;
   font-size: 1.2rem;
 }
 .card__title {
-  margin-top: 2rem;
+  margin-top: 1.7rem;
   color: hsl(0, 0%, 7%);
   font-size: 2rem;
 }
@@ -71,12 +74,12 @@ html {
   color: hsl(0, 0%, 7%);
   display: flex;
   align-items: center;
-  margin-top: 2.3rem;
+  margin-top: 2.2rem;
   font-weight: bolder;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 .card__fotter-avatar {
-  margin-right: 0.7em;
+  margin-right: 0.9em;
   max-width: 33px;
 }
 
@@ -85,20 +88,17 @@ html {
     max-width: 34rem;
   }
   .card__button {
-    padding: 0.6rem 1.5rem;
+    padding: 0.8rem 1.5rem;
   }
   .card_date {
-    margin-top: 1.4rem;
+    margin-top: 1.5rem;
     font-size: 1.4rem;
   }
   .card__title {
-    margin-top: 1.7rem;
+    margin-top: 1.5rem;
     font-size: 2.4rem;
   }
   .card_text {
     font-size: 1.6rem;
-  }
-  .card__footer {
-    margin-top: 2rem;
   }
 }
