--- a/fem/blog-preview-card-main/css/blog-card.css
+++ b/fem/blog-preview-card-main/css/blog-card.css
@@ -56,7 +56,7 @@ html {
   font-weight: bolder;
   font-size: 1.1rem;
 }
-.card_date {
+.card__date {
   margin-top: 1.5rem;
   font-size: 1.2rem;
 }
@@ -65,7 +65,10 @@ html {
   color: hsl(0, 0%, 7%);
   font-size: 2rem;
 }
-.card_text {
+.card__title:hover {
+  color: hsl(47, 88%, 63%);
+}
+.card__text {
   margin-top: -5px;
   font-size: 1.4rem;
   line-height: 1.5;
@@ -80,7 +83,7 @@ html {
 }
 .card__fotter-avatar {
   margin-right: 0.9em;
-  max-width: 33px;
+  max-width: 3.3rem;
 }
 
 @media (min-width: 600px) {
@@ -90,7 +93,7 @@ html {
   .card__button {
     font-size: 1.3rem;
   }
-  .card_date {
+  .card__date {
     margin-top: 1.3rem;
     font-size: 1.4rem;
   }
@@ -98,7 +101,7 @@ html {
     margin-top: 1.7rem;
     font-size: 2.42rem;
   }
-  .card_text {
+  .card__text {
     font-size: 1.6rem;
   }
   .card__footer {
