--- a/fem/6_J_fylo-dark-theme-landing-page-master/css/components/header.css
+++ b/fem/6_J_fylo-dark-theme-landing-page-master/css/components/header.css
@@ -26,6 +26,12 @@
 .nav__item {
   padding-left: 1.58rem;
 }
+.nav__item:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  font-variation-settings: "wght" 700;
+  color: var(--clr-neutral-light);
+}
 
 @media (min-width: 900px) {
   .header {
