--- a/fem/css/components/main_files.css
+++ b/fem/css/components/main_files.css
@@ -41,3 +41,22 @@
     font-size: 1.25rem;
   }
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+th {
+  background-color: #f2f2f2;
+  color: var(--clr-neutral-dark);
+}
+tr:hover {
+  background-color: #f1f1f1;
+  color: var(--clr-neutral-dark);
+}
