MVC : Express, movie project, add images of movies to the repository

--- a/vanillaJS/basic_express_movies_mvc/src/views/index.html
+++ b/vanillaJS/basic_express_movies_mvc/src/views/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Movies</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://mgallegoa.github.io/img/Manuel_32x32.ico"
+    />
     <style>
       main {
         display: flex;
