MVC : Express, movie project, add mongo db model for movie project

--- a/vanillaJS/basic_express_movies_mvc/src/views/index.html
+++ b/vanillaJS/basic_express_movies_mvc/src/views/index.html
@@ -72,8 +72,8 @@
     </script>
   </head>
   <body>
-    <h1>This pag`htest the solution for CORS restriction from the server</h1>
-    <p>Run with npm run dev and then npx server ./src/web</p>
+    <h1>This page test the solution for CORS restriction from the server</h1>
+    <p>Run with "npm run dev" and then "npx server -p 1234 ./src/web"</p>
     <main></main>
   </body>
 </html>
